deploy: aedefd2d44f16152f72f2e64bd4573e7e75eb9ea

--- a/notes/dom/index.html
+++ b/notes/dom/index.html
@@ -46,13 +46,13 @@
 <div class="container">
     <nav class="sidebar">
         <a href='/introduction-to-html-css-js/'>Home</a>
-        <ul><li><a href="/introduction-to-html-css-js/notes/">Including JS in HTML</a></li></ul>
+        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">Including JS in HTML</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: The JavaScript Debugger</a></li></ul>
         <a href="/introduction-to-html-css-js/about/">About</a>
     </nav>
 
     <div class="content">
         
-        <div class="nextprev">
+        <div class="nextprev"><p class="next">Next: <a href="/introduction-to-html-css-js/notes/events/">Events</a></p>
         </div>
         <div class="comments">
             <script src="https://utteranc.es/client.js"
