--- a/notes/forms/index.html
+++ b/notes/forms/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>About</title>
+    <title>Forms</title>
 
     <meta name="description" content="">
 
@@ -18,7 +18,7 @@
 
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="About">
+    <meta property="og:title" content="Forms">
     <meta property="og:site_name" content="Introduction to Programming">
     <meta property="og:locale" content="en_GB">
     <meta property="article:author" content="Martin Chorley">
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@martinjc">
     <meta name="twitter:url" content="">
-    <meta name="twitter:title" content="About">
+    <meta name="twitter:title" content="Forms">
 
     <link rel="icon" href="/introduction-to-html-css-js/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Scope+One&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
 </header>
     <header>
     <h1> <a href="">
-            About
+            Forms
         </a></h1>
 </header>
 
@@ -52,7 +52,7 @@
 
     <div class="content">
         
-        <div class="nextprev">
+        <div class="nextprev"><p class="next">Next: <a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: The JavaScript Debugger</a></p><p class="previous">Previous: <a href="/introduction-to-html-css-js/notes/events/">Events</a></p>
         </div>
         <div class="comments">
             <script src="https://utteranc.es/client.js"
