deploy: 1efa2e8a6bb6cd367db15f6126f1b81b53239f67

--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
 <div class="container">
     <nav class="sidebar">
         <a href='/introduction-to-html-css-js/'>Home</a>
-        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">Including JS in HTML</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: The JavaScript Debugger</a></li></ul>
+        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">The Document Object Model</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: Forms, Events and the JavaScript Debugger</a></li></ul>
         <a href="/introduction-to-html-css-js/about/">About</a>
     </nav>
 
