--- a/notes/events/index.html
+++ b/notes/events/index.html
@@ -46,13 +46,35 @@
 <div class="container">
     <nav class="sidebar">
         <a href='/introduction-to-html-css-js/'>Home</a>
-        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">Including JS in HTML</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: The JavaScript Debugger</a></li></ul>
+        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">The Document Object Model</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: Forms, Events and the JavaScript Debugger</a></li></ul>
         <a href="/introduction-to-html-css-js/about/">About</a>
     </nav>
 
     <div class="content">
-        
-        <div class="nextprev"><p class="next">Next: <a href="/introduction-to-html-css-js/notes/forms/">Forms</a></p><p class="previous">Previous: <a href="/introduction-to-html-css-js/notes/dom/">Including JS in HTML</a></p>
+        <p>Now we’ll look at responding to interaction events on our webpages using JavaScript</p>
+<iframe src="https://cardiff.cloud.panopto.eu/Panopto/Pages/Embed.aspx?id=1d41ed3b-a73b-4bfc-8356-acab0166e75a&v=1" width="720" height="405" style="padding: 0px; border: 1px solid #464646;" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+<p><small>If the embed above does not work here is a <a href="https://cardiff.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=1d41ed3b-a73b-4bfc-8356-acab0166e75a" target="blank">link to the full version of the video</a></small></p>
+<iframe src="https://cardiff.cloud.panopto.eu/Panopto/Pages/Embed.aspx?id=45b788d3-fcdf-4968-b603-acac016d1801&v=1" width="720" height="405" style="padding: 0px; border: 1px solid #464646;" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+<p><small>If the embed above does not work here is a <a href="https://cardiff.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=45b788d3-fcdf-4968-b603-acac016d1801" target="blank">link to the full version of the video</a></small></p>
+<h2>Reading</h2>
+<ul>
+<li><a href="http://eloquentjavascript.net/15_event.html">Eloquent JavaScript - Chapter 15</a> - This chapter looks at how JavaScript deals with events (mouse clicks etc) on a page.</li>
+</ul>
+<h2>Code Examples</h2>
+<p>There are some example pieces of code for this topic</p>
+<ul>
+<li>JavaScript Events
+<ul>
+<li>Click <a href="https://github.com/martinjc/introduction-to-html-css-js/blob/main/src/examples/events/click">[Code]</a> <a href="https://martinjc.github.io/introduction-to-html-css-js/examples/events/click/">[Demo]</a></li>
+<li>MouseOver <a href="https://github.com/martinjc/introduction-to-html-css-js/blob/main/src/examples/events/mouseover">[Code]</a> <a href="https://martinjc.github.io/introduction-to-html-css-js/examples/events/mouseover/">[Demo]</a></li>
+<li>MouseEnter and Mouseout <a href="https://github.com/martinjc/introduction-to-html-css-js/blob/main/src/examples/events/mouseenterout">[Code]</a> <a href="https://martinjc.github.io/introduction-to-html-css-js/examples/events/mouseenterout/">[Demo]</a></li>
+<li>Parameters <a href="https://github.com/martinjc/introduction-to-html-css-js/blob/main/src/examples/events/params">[Code]</a> <a href="https://martinjc.github.io/introduction-to-html-css-js/examples/events/params/">[Demo]</a></li>
+<li>Bubbling <a href="https://github.com/martinjc/introduction-to-html-css-js/blob/main/src/examples/events/bubbling">[Code]</a> <a href="https://martinjc.github.io/introduction-to-html-css-js/examples/events/bubbling/">[Demo]</a></li>
+</ul>
+</li>
+</ul>
+
+        <div class="nextprev"><p class="next">Next: <a href="/introduction-to-html-css-js/notes/forms/">Forms</a></p><p class="previous">Previous: <a href="/introduction-to-html-css-js/notes/dom/">The Document Object Model</a></p>
         </div>
         <div class="comments">
             <script src="https://utteranc.es/client.js"
