--- a/notes/forms/index.html
+++ b/notes/forms/index.html
@@ -46,13 +46,26 @@
 <div class="container">
     <nav class="sidebar">
         <a href='/introduction-to-html-css-js/'>Home</a>
-        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">Including JS in HTML</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: The JavaScript Debugger</a></li></ul>
+        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">The Document Object Model</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: Forms, Events and the JavaScript Debugger</a></li></ul>
         <a href="/introduction-to-html-css-js/about/">About</a>
     </nav>
 
     <div class="content">
-        
-        <div class="nextprev"><p class="next">Next: <a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: The JavaScript Debugger</a></p><p class="previous">Previous: <a href="/introduction-to-html-css-js/notes/events/">Events</a></p>
+        <p>Now we’ll look at using HTML forms to allow users to input data into our websites, and later on we’ll see some examples of how to get that data and use it in JavaScript</p>
+<iframe src="https://cardiff.cloud.panopto.eu/Panopto/Pages/Embed.aspx?id=c6d36473-393e-4344-a2fa-acab0166e792&v=1" width="720" height="405" style="padding: 0px; border: 1px solid #464646;" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+<p><small>If the embed above does not work here is a <a href="https://cardiff.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=c6d36473-393e-4344-a2fa-acab0166e792" target="blank">link to the full version of the video</a></small></p>
+<h2>Reading</h2>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Forms/Your_first_HTML_form">MDN - Your first HTML Form</a> - Creating an HTML form.</li>
+</ul>
+<h2>Code Examples</h2>
+<p>There are some example pieces of code for this topic</p>
+<ul>
+<li>HTML Form Elements <a href="https://github.com/martinjc/introduction-to-html-css-js/blob/main/src/examples/forms/1">[Code]</a> <a href="https://martinjc.github.io/introduction-to-html-css-js/examples/forms/1">[Demo]</a></li>
+<li>HTML Form Elements + JavaScript <a href="https://github.com/martinjc/introduction-to-html-css-js/blob/main/src/examples/forms/2">[Code]</a> <a href="https://martinjc.github.io/introduction-to-html-css-js/examples/forms/2">[Demo]</a></li>
+</ul>
+
+        <div class="nextprev"><p class="next">Next: <a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: Forms, Events and the JavaScript Debugger</a></p><p class="previous">Previous: <a href="/introduction-to-html-css-js/notes/events/">Events</a></p>
         </div>
         <div class="comments">
             <script src="https://utteranc.es/client.js"
