--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
 <div class="container">
     <nav class="sidebar">
         <a href='/introduction-to-html-css-js/'>Home</a>
-        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">Including JS in HTML</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: The JavaScript Debugger</a></li></ul>
+        <ul><li><a href="/introduction-to-html-css-js/notes/dom/">The Document Object Model</a></li><li><a href="/introduction-to-html-css-js/notes/events/">Events</a></li><li><a href="/introduction-to-html-css-js/notes/forms/">Forms</a></li><li><a href="/introduction-to-html-css-js/notes/forms-lab/">Practical Exercise: Forms, Events and the JavaScript Debugger</a></li></ul>
         <a href="/introduction-to-html-css-js/about/">About</a>
     </nav>
 
     <div class="content">
         <p>These notes follow on from the <a href="https://martinjc.github.io/introduction-to-html-and-css/">Introduction to HTML and CSS</a> and the <a href="https://martinjc.github.io/introduction-to-js/">Introduction to JavaScript</a> and start to put the three technologies together so we can start to build rich interactive front-end websites. We do not look at any specific ‘flavour of the moment’ front-end development libraries, those looking for information on React, Vue, Angular or whatever else is currently ‘hip’ in the ‘overuse of JavaScript is web development’ world should look elsewhere. Here we keep our focus on clean, semantic HTML and CSS with the sparing addition of vanilla JavaScript where absolutely necessary to provide functionality.</p>
+<p>We start by first looking at how to include JavaScript in our HTML pages:</p>
+<iframe src="https://cardiff.cloud.panopto.eu/Panopto/Pages/Embed.aspx?id=722adb19-a415-478d-ada6-acab0166e6fb&v=1" width="720" height="405" style="padding: 0px; border: 1px solid #464646;" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+<p><small>If the embed above does not work here is a <a href="https://cardiff.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=722adb19-a415-478d-ada6-acab0166e6fb" target="blank">link to the full version of the video</a></small></p>
 
         <div class="nextprev">
         </div>
